--- a/master_config.json
+++ b/master_config.json
@@ -1,3 +1,3 @@
 {
-    "master_password_hash_full": "$argon2id$v=19$m=65536,t=3,p=4$D4/M20BoreMHYKDozh1fsQ$U4UhO2Vo1QYeR505FuMu3fR9Id506MtM2vqy/2RqjmI"
+    "master_password_hash_full": "$argon2id$v=19$m=65536,t=3,p=4$LaMkyk9FSrBvmKDocvtqrw$NRnKq84YMrWAiCX1TX1sY5cLnhv3+zO+MabxTSRdKAE"
 }
